// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Workflow renders a workflow component 1`] = `
Array [
  <label
    htmlFor="state-select"
  >
    State
  </label>,
  <div
    className="react-select-container css-2b097c-container"
    onKeyDown={[Function]}
  >
    <div
      className="react-select__control css-yjz7n5-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="react-select__value-container react-select__value-container--has-value css-1hwfws3"
      >
        <div
          className="react-select__single-value css-1uccc91-singleValue"
        >
          <span
            style={
              Object {
                "backgroundColor": "#ed4033",
                "borderRadius": "50%",
                "content": " ",
                "display": "inline-block",
                "height": "10px",
                "marginLeft": "10px",
                "marginRight": "10px",
                "width": "10px",
              }
            }
          />
          Private
        </div>
        <input
          className="css-62g3xt-dummyInput"
          disabled={false}
          id="react-select-3-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          tabIndex="0"
          value=""
        />
      </div>
      <div
        className="react-select__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className="react-select__indicator-separator css-6fp5c8-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          className="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "#007bc1",
                "height": "24px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
        </div>
      </div>
    </div>
    <input
      name="display-select"
      type="hidden"
      value="private"
    />
  </div>,
]
`;

exports[`Workflow renders an empty workflow component 1`] = `
Array [
  <label
    htmlFor="state-select"
  >
    State
  </label>,
  <div
    className="react-select-container react-select--is-disabled css-14jk2my-container"
    onKeyDown={[Function]}
  >
    <div
      className="react-select__control react-select__control--is-disabled css-1g1dlbm-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="react-select__value-container react-select__value-container--has-value css-1hwfws3"
      >
        <div
          className="react-select__single-value react-select__single-value--is-disabled css-107lb6w-singleValue"
        >
          <span
            style={
              Object {
                "backgroundColor": "#007bc1",
                "borderRadius": "50%",
                "content": " ",
                "display": "inline-block",
                "height": "10px",
                "marginLeft": "10px",
                "marginRight": "10px",
                "width": "10px",
              }
            }
          />
          Public
        </div>
        <input
          className="css-62g3xt-dummyInput"
          disabled={true}
          id="react-select-2-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          tabIndex="0"
          value=""
        />
      </div>
      <div
        className="react-select__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className="react-select__indicator-separator css-8z7nta-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          className="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "#007bc1",
                "height": "24px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
        </div>
      </div>
    </div>
  </div>,
]
`;
